--- a/.github/workflows/readme.yml
+++ b/.github/workflows/readme.yml
@@ -2,7 +2,7 @@ name: Update readme
 
 on:
   schedule:
-    - cron: "0 4 * * *"
+    - cron: "0 0 * * *"
   workflow_dispatch:
 
 jobs:
@@ -25,9 +25,9 @@ jobs:
       - name: Commit changes
         uses: EndBug/add-and-commit@v4
         with:
-          author_name: Jason Long
-          author_email: jason@jasonlong.me
+          author_name: Salem Olorundare
+          author_email: salemolorundare@gmail.com
           message: "Auto updating my readme"
           add: "*.svg"
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.TOKEN }}
