--- a/.github/workflows/readme.yml
+++ b/.github/workflows/readme.yml
@@ -2,7 +2,7 @@ name: Update readme
 
 on:
   schedule:
-    - cron: "0 0 * * *"
+    - cron: '0 0 * * *'
   workflow_dispatch:
 
 jobs:
@@ -27,7 +27,7 @@ jobs:
         with:
           author_name: Salem Olorundare
           author_email: salemolorundare@gmail.com
-          message: "Auto updating my readme"
-          add: "*.svg"
+          message: 'Auto updating my readme'
+          add: '*.svg'
         env:
-          GITHUB_TOKEN: ${{ secrets.TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
