--- a/.github/workflows/readme.yml
+++ b/.github/workflows/readme.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Generate readme
         env:
           WEATHER_API_KEY: ${{ secrets.WEATHER_API_KEY }}
-        run: echo "${{ secrets.WEATHER_API_KEY }}"
+      - run: echo "${{ secrets.WEATHER_API_KEY }}"
 
       - name: Commit changes
         uses: EndBug/add-and-commit@v4
