--- a/.github/workflows/readme.yml
+++ b/.github/workflows/readme.yml
@@ -20,7 +20,6 @@ jobs:
       - name: Generate readme
         env:
           WEATHER_API_KEY: ${{ secrets.WEATHER_API_KEY }}
-      - run: echo "${{ secrets.TOKEN }}"
 
       - name: Commit changes
         uses: EndBug/add-and-commit@v4
@@ -31,4 +30,4 @@ jobs:
           add: '*.svg'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - run: echo "${{ secrets.GITHUB_TOKEN }}"
+      - run: echo "${{ secrets.WEATHER_API_KEY }}"
