--- a/.github/workflows/readme.yml
+++ b/.github/workflows/readme.yml
@@ -20,14 +20,14 @@ jobs:
       - name: Generate readme
         env:
           WEATHER_API_KEY: ${{ secrets.WEATHER_API_KEY }}
+        run: node build-svg.js
 
       - name: Commit changes
         uses: EndBug/add-and-commit@v4
         with:
-          author_name: Salem Olorundare
-          author_email: salemolorundare@gmail.com
+          author_name: Artem Kulikov
+          author_email: kulikov.dev@gmail.com
           message: 'Auto updating my readme'
           add: '*.svg'
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - run: echo "${{ secrets.WEATHER_API_KEY }}"
+          GITHUB_TOKEN: ${{ secrets.TOKEN }}
