--- a/.github/workflows/readme.yml
+++ b/.github/workflows/readme.yml
@@ -25,8 +25,8 @@ jobs:
       - name: Commit changes
         uses: EndBug/add-and-commit@v4
         with:
-          author_name: Artem Kulikov
-          author_email: kulikov.dev@gmail.com
+          author_name: Salem Olorundare
+          author_email: salemolorundareS@gmail.com
           message: 'Auto updating my readme'
           add: '*.svg'
         env:
