--- a/.github/workflows/readme.yml
+++ b/.github/workflows/readme.yml
@@ -30,4 +30,4 @@ jobs:
           message: 'Auto updating my readme'
           add: '*.svg'
         env:
-          GITHUB_TOKEN: ${{ secrets.TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
