--- a/.github/workflows/readme.yml
+++ b/.github/workflows/readme.yml
@@ -29,3 +29,5 @@ jobs:
           author_email: salemolorundare@gmail.com
           message: 'Auto updating my readme'
           add: '*.svg'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
