--- a/.github/workflows/readme.yml
+++ b/.github/workflows/readme.yml
@@ -18,16 +18,12 @@ jobs:
       - run: npm install
 
       - name: Generate readme
-        env:
-          WEATHER_API_KEY: ${{ secrets.WEATHER_API_KEY }}
         run: node build-svg.js
 
       - name: Commit changes
-        uses: EndBug/add-and-commit@v4
-        with:
-          author_name: Salem Olorundare
-          author_email: salemolorundare@gmail.com
-          message: 'Auto updating my readme'
-          add: '*.svg'
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          git add .
+          git commit -m "Auto updating my readme"
+
+      - name: Push changes
+        run: git push
